feat(api): delete projects and associated data
